* new - more helpful platform-dependent error messages
* added - __main__.py module to support `python -im pylibftdi`
* added - `index` parameter to Device() constructor to allow indexing
  into the list returned from Driver.list_devices(). Useful to access
  e.g. the second device where PID differs between the first two devices
  and device_index would reset to zero for each PID/VID combination.

0.17.0
~~~~~~
* new - added 0x6015 USB PID to the default PID list, supporting FT230 devices
* fixed - updated ftdi_osx_driver_re/unload scripts to support Python3
* fixed - auto_detach bug on some systems (Bitbucket issue #27)
* *API CHANGE* - Moved `auto_detach`, `chunk_size` and `lazy_open` to class
  attributes which can be easily overridden in subclasses, or in kwargs.
  This means that any program using these as *positional* arguments needs
  to change to use them as keyword parameters. Note: all but `device_id` and
  `mode` may become keyword-only arguments in the future.

0.16.1.2
* rebuilt to fix install issue on macOS

0.16.1.1
~~~~~~~~
* changed / fixed - still getting segfault in some situations with
  combination of auto_detach=True and libftdi 0.x, so auto_detach
  is now only supported in libftdi 1.0+ and ignored otherwise.

0.16.1
~~~~~~
* fixed - segfault opening `Device` instances when `auto_detach` used and
  running on early (pre 1.0) versions of `libftdi`.

0.16.0
~~~~~~
* new/changed - Automatic driver detach. By default, calls
  `libusb_set_auto_detach_kernel_driver()` on  newly opened devices, to
  restore kernel drivers after close.  Note this only seems to have an
  effect on Linux, as far as I can tell.
  Disable with `Device(..., auto_detach=False)`
* new - serial_transfer example which checks that pseudo-random data send
  over a serial connection is correctly transferred.
* new - `modem_status` property on SerialDevice() object, 16-bit value where
  each bit represents a different value such as 'Overrun Error'. See docstring