@@ -7,7 +7,7 @@ Install pylibftdi
 See the installation_ instructions for more detailed requirements, but
 hopefully things will work by just running the following::
 
-    $ pip install pylibftdi
+    $ python3 -m pip install pylibftdi
 
 .. _installation: installation.html
 
@@ -17,7 +17,7 @@ Connect and enumerate FTDI devices
 Connect the FTDI device to a free USB port. Run the ``list_devices`` example
 to enumerate connected FTDI devices::
 
-    $ python -m pylibftdi.examples.list_devices
+    $ python3 -m pylibftdi.examples.list_devices
 
 For each connected device, this will show manufacturer, model identifier,
 and serial number. With a single device connected, the output maybe
@@ -39,7 +39,7 @@ Connect an LED between D0 of your bit-bang capable device and ground, via a
 
 Test the installation and functioning of pylibftdi with the following::
 
-    $ python -m pylibftdi.examples.led_flash
+    $ python3 -m pylibftdi.examples.led_flash
 
 The LED should now flash at approximately 1Hz.
 
@@ -50,9 +50,23 @@ To test some input, remove any connections from the port lines initially,
 then run the following, which reads and prints the status of the input lines
 regularly::
 
-    $ python -m pylibftdi.examples.pin_read
+    $ python3 -m pylibftdi.examples.pin_read
 
 The ``pin_read`` example is a complete command line application which can
 be used to monitor for particular values on the attached device pins, and
 output an appropriate error code on match. Repeat the above with a trailing
 ``--help`` for info.
+
+Using ``pylibftdi`` from the REPL
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+Since ``pylibftdi`` v0.18.0, a ``__main__.py`` module is included which
+imports all the exported constants, classes and functions from ``pylibftdi``.
+
+This allows quick interaction with FTDI devices from the Python REPL::
+
+    $ python3 -im pylibftdi
+    >>> d = Device()
+    >>> d.write('Hello World')
+    >>>
+
